--- a/.spacelift/config.yml
+++ b/.spacelift/config.yml
@@ -1,7 +1,10 @@
 # The version of the configuration file format
 version: 1
 # Your module version - must be changed to release a new version
-module_version: 0.1.0
+module_version: 0.2.0
+
+stack_defaults:
+  runner_image: non-existing-imagexxxxxx
 
 # The set of tests to run to verify your module works correctly
 tests:
